the second commit

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -8,5 +8,7 @@
     <% end %>
 </ul>
 
-<%= link_to "Create a new article", new_article_path, class: 'new_article' %>
+<%= link_to "Create a new article", new_article_path, class: 'new_article' %> </br>
+
+
 </li>
