Добавил неработающую ссылку

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,5 +10,6 @@
 
 <%= link_to "Create a new article", new_article_path, class: 'new_article' %> </br>
 
+<%= link_to "Неработающая ссылка" %>
 
 </li>
